refactor in preparation for capturing new output/results

--- a/meditron/reference_notebooks/langchain_best_example.ipynb
+++ b/meditron/reference_notebooks/langchain_best_example.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28fca8658027405782de680c2cfc64fc",
+       "model_id": "b17ec849279a4eeab5cc827b50fc642b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,6 @@
     "from torch import cuda, bfloat16\n",
     "import transformers\n",
     "\n",
-    "token=\"\"\n",
     "model_id=\"epfl-llm/meditron-7b\"\n",
     "\n",
     "device = f'cuda:{cuda.current_device()}' if cuda.is_available() else 'cpu'\n",
@@ -67,7 +66,7 @@
     "\n",
     "model_config = transformers.AutoConfig.from_pretrained(\n",
     "    model_id,\n",
-    "    token=token\n",
+    "    # token=token\n",
     ")\n",
     "\n",
     "model = transformers.AutoModelForCausalLM.from_pretrained(\n",
@@ -76,12 +75,12 @@
     "    config=model_config,\n",
     "    quantization_config=bnb_config,\n",
     "    device_map='auto',\n",
-    "    token=token\n",
+    "    # token=token\n",
     ")\n",
     "\n",
     "tokenizer = transformers.AutoTokenizer.from_pretrained(\n",
     "    model_id,\n",
-    "    token=token\n",
+    "    # token=token\n",
     ")\n",
     "\n",
     "# enable evaluation mode to allow model inference\n",
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "80efc1b6-8e3f-4f5f-b17f-65c8b0eceed5",
    "metadata": {
     "tags": []
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dab8f620-d82d-4eb1-8c8f-b7639d7fd988",
    "metadata": {
     "tags": []
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a7985891-8fdb-4303-878b-fd1da5be075b",
    "metadata": {
     "tags": []
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "640268cf-85a8-4f50-aaf0-4ea9110a073d",
    "metadata": {
     "tags": []
@@ -339,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "fca9e975-e69c-4acd-8254-e02a8253357a",
    "metadata": {
     "tags": []
@@ -407,8 +406,8 @@
       "•\tAllergy/hypersensitivity: Known hypersensitivity to both allopurinol and rasburicase\n",
       "\n",
       "Diseases: Aggressive B-cell Non-Hodgkin Lymphoma (inclusion)\n",
-      "Biomarkers: CD20 (inclusion)\n",
-      "Prior Therapies: Allogeneic stem cell transplantation or solid organ transplantation (exclusion)\n",
+      "Biomarkers: none\n",
+      "Prior Therapies: organ or hematologic transplant (exclusion)\n",
       "\n",
       "\n",
       "Task:\n",
@@ -418,16 +417,16 @@
       "Inclusion Criteria\n",
       "•\tPatients must be ≥ 18 years old\n",
       "•\tPatients must have histologically or cytologically confirmed advanced or metastatic solid tumor\n",
-      "•\tPatients must have measurable disease according to Response\n"
+      "•\tPatients must have measurable disease according to Response Evaluation Criteria in Solid Tumors (RE\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Diseases: Aggressive B-cell Non-Hodgkin Lymphoma (inclusion)\\nBiomarkers: CD20 (inclusion)\\nPrior Therapies: Allogeneic stem cell transplantation or solid organ transplantation (exclusion)\\n\\n\\nTask:\\nBelow is an example of clinical trial eligibility inclusion/exclusion criteria. Your identify 3 categories of data within it. The 3 categories are: 1) Disease: a disorder affecting humans, 2) Biomarker: genes, proteins, or other substances that can be tested for to reveal important details about a patient’s cancer, and 3) Prior Therapy: medications, surgeries, or procedures that a patient may be treated with. For each of the identified categories, state whether it is an inclusion or exclusion.\\nCriteria:\\n    \\nInclusion Criteria\\n•\\tPatients must be ≥ 18 years old\\n•\\tPatients must have histologically or cytologically confirmed advanced or metastatic solid tumor\\n•\\tPatients must have measurable disease according to Response'"
+       "'Diseases: Aggressive B-cell Non-Hodgkin Lymphoma (inclusion)\\nBiomarkers: none\\nPrior Therapies: organ or hematologic transplant (exclusion)\\n\\n\\nTask:\\nBelow is an example of clinical trial eligibility inclusion/exclusion criteria. Your identify 3 categories of data within it. The 3 categories are: 1) Disease: a disorder affecting humans, 2) Biomarker: genes, proteins, or other substances that can be tested for to reveal important details about a patient’s cancer, and 3) Prior Therapy: medications, surgeries, or procedures that a patient may be treated with. For each of the identified categories, state whether it is an inclusion or exclusion.\\nCriteria:\\n    \\nInclusion Criteria\\n•\\tPatients must be ≥ 18 years old\\n•\\tPatients must have histologically or cytologically confirmed advanced or metastatic solid tumor\\n•\\tPatients must have measurable disease according to Response Evaluation Criteria in Solid Tumors (RE'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
