test single criterion and 8bit quant

--- a/meditron/test_chunking.ipynb
+++ b/meditron/test_chunking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "1021d0e2-364a-4abf-a3ef-02a75d4b949c",
    "metadata": {
     "tags": []
@@ -14,20 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ba54b270-f43c-4917-bad2-519aa4ab9f75",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[tensor([29871,    13,    13], device='cuda:0'), tensor([29871,    13,    13,    13], device='cuda:0'), tensor([ 9330, 29901,    13, 21140,   340], device='cuda:0')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import StoppingCriteria, StoppingCriteriaList\n",
     "import torch\n",
@@ -51,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "ba3167ac-85da-4355-b0a0-89cff695084d",
    "metadata": {
     "tags": []
@@ -79,21 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "a7985891-8fdb-4303-878b-fd1da5be075b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -103,46 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "535ade9f-85ad-428a-b333-b6276cbad97a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are in the role of an abstractor who will analyze eligibility criteria for a clinical trial and represent the information as a list of individual criteria in a tabular format that will contain the following columns: \n",
-      "Type: listing whether criterion is an Exclusion or Inclusion criterion\n",
-      "Original Text: the original text of the criterion\n",
-      "Disease/Condition: If the criterion contains a disease or condition name it by its canonical name\n",
-      "Procedure: If the criterion contains a therapeutic procedure name it by its canonical name\n",
-      "Drug:  If the criterion contains a therapeutic drug name it by its canonical name\n",
-      "Biomarker:  If the criterion contains a biomarker name it by its canonical name\n",
-      "Computable Rule: Translate the criteria into a logical expression that could be interpreted programmatically\n",
-      "    Inclusion Criteria:\n",
-      "    •\tAdults with a confirmed diagnosis of unresectable, locally advanced and/or metastatic Stage IIIB/IV NSCLC, Stage III/IV PDAC and/or Stage III/IV CRC with no curative-intent treatment options and documented activating KRAS mutation (without known additional actionable driver mutations such as EGFR, ALK or ROS1)\n",
-      "    •\tDocumented progression and measurable disease after ‚â• 1 prior line of systemic therapy (‚â• 2 and ‚â§ 4 prior lines for NSCLC) with adequate washout period and resolution of treatment-related toxicities to ‚â§ Grade 2\n",
-      "    •\tECOG PS of 0-2 (0-1 for PDAC) and a life expectancy > 3 months in the opinion of the Investigator\n",
-      "    •\tAdequate hematological, liver, and renal function\n",
-      "    •\tMen and women of childbearing potential must use adequate birth control measures for the duration of the trial and at least 90 days after discontinuing study treatment\n",
-      "    •\tSymptomatic and/or untreated CNS or brain metastasis, pre-existing ILD or pericardial/pleural effusion of ‚â• grade 2 or requiring chronic oxygen therapy for COPD or pleural effusions\n",
-      "    •\tSerious concomitant disorder including infection\n",
-      "    •\tKnown positive test for HIV, HCV, HBV surface antigen\n",
-      "\n",
-      "    Exclusion Criteria:\n",
-      "    •\tConcurrent malignancy in the previous 2 years\n",
-      "    •\tPrior menin inhibitor therapy\n",
-      "    •\tRequiring treatment with a strong or moderate CYP3A inhibitor/inducer\n",
-      "    •\tSignificant cardiovascular disease or QTcF or QTcB prolongation.\n",
-      "    •\tMajor surgery within 4 weeks prior to first dose\n",
-      "    •\tWomen who are pregnant or lactating.\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(prompt_zero.format(criteria=\"\"\"Inclusion Criteria:\n",
     "    •\tAdults with a confirmed diagnosis of unresectable, locally advanced and/or metastatic Stage IIIB/IV NSCLC, Stage III/IV PDAC and/or Stage III/IV CRC with no curative-intent treatment options and documented activating KRAS mutation (without known additional actionable driver mutations such as EGFR, ALK or ROS1)\n",
@@ -166,23 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "54f23e97-3728-4061-bb95-6b0b6842b3de",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  avg prompt: 794\n",
-      "  min prompt: 702\n",
-      "  max prompt: 947\n",
-      "avg response: 220\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from token_counting import *\n",
     "globalize_token_metrics(examples)\n",
@@ -194,30 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "1d423e3b-69ce-44cb-b451-b2aee94db13a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Inclusion Criteria\\n{inclusion}\\n\\nExclusion Criteria\\n{exclusion}\\n'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from chunking import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "fca9e975-e69c-4acd-8254-e02a8253357a",
    "metadata": {
     "tags": []
@@ -243,7 +170,7 @@
     "langchain.debug = True\n",
     "langchain.verbose = True\n",
     "\n",
-    "n = '02'\n",
+    "n = '01'\n",
     "folder = f'test_results/trial{n}'\n",
     "\n",
     "original_doc = parse_file(f'{folder}/unstructured_ec.txt')\n",
@@ -253,7 +180,7 @@
     "\n",
     "for idx, doc in enumerate(doc_chunks):\n",
     "    results = llm_chain.invoke(input={'criteria': str(doc)})\n",
-    "    with open(f'{folder}/smaller_chunking_task_{idx}_output.txt', 'w', encoding='utf-8') as fileout:\n",
+    "    with open(f'{folder}/smaller_chunking_task_8bit_{idx}_output.txt', 'w', encoding='utf-8') as fileout:\n",
     "        fileout.write(results['text'])\n",
     "\n",
     "    for line in doc.inc:\n",
@@ -263,15 +190,15 @@
     "        if line not in exc:\n",
     "            exc.append(line)\n",
     "\n",
-    "reassembled_doc = ECDoc(inc, exc)\n",
+    "# reassembled_doc = ECDoc(inc, exc)\n",
     "\n",
-    "with open(f'{folder}/smaller_chunking_reassembled.txt', 'w') as docfile:\n",
-    "    docfile.write(str(reassembled_doc))"
+    "# with open(f'{folder}/smaller_chunking_reassembled.txt', 'w') as docfile:\n",
+    "#     docfile.write(str(reassembled_doc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1e88d21e-7fa0-4ab1-9069-cb98e4c62357",
    "metadata": {
     "tags": []
