final results - trial 1

--- a/meditron/test_single_criterion.ipynb
+++ b/meditron/test_single_criterion.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dce5468334154161a21d7cb962053d45",
+       "model_id": "67e0db87bcab4e129b6011f419e8ffe8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,7 +60,7 @@
     "    # we pass model parameters here too\n",
     "    # stopping_criteria=stopping_criteria,  # without this model rambles during chat\n",
     "    temperature=0.1,  # 'randomness' of outputs, 0.0 is the min and 1.0 the max\n",
-    "    max_new_tokens=256,  # max number of tokens to generate in the output\n",
+    "    max_new_tokens=500,  # max number of tokens to generate in the output\n",
     "    repetition_penalty=1.1,  # without this output begins repeating\n",
     "    do_sample=True,\n",
     "    # streamer = transformers.TextStreamer(tokenizer)\n",
@@ -86,42 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "159c99a8-f29f-44e0-a738-2977f72ec7a0",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are in the role of an abstractor who will analyze an eligibility criterion for a clinical trial and extract the relevant entities as described below.\n",
-      "Original Text: the original text of the criterion\n",
-      "Disease/Condition: If the criterion contains a disease or condition name it by its canonical name\n",
-      "Procedure: If the criterion contains a therapeutic procedure name it by its canonical name\n",
-      "Drug:  If the criterion contains a therapeutic drug name it by its canonical name\n",
-      "Biomarker:  If the criterion contains a biomarker name it by its canonical name\n",
-      "Computable Rule: Translate the criteria into a logical expression that could be interpreted programmatically\n",
-      "\n",
-      "Criterion:\n",
-      "    Subject must not have any affected lymph nodes or metastatic disease\n",
-      "\n",
-      "Output:\n",
-      "    Original Text: Subject must not have any affected lymph nodes or metastatic disease\n",
-      "    Disease/Condition: Lymph node-Metastases, Metastatic Disease\n",
-      "    Procedure: none\n",
-      "    Drug: none\n",
-      "    Biomarker: none\n",
-      "    Computable Rule: LK MTS == False, MTS == False\n",
-      "\n",
-      "Criterion:\n",
-      "    Patient must have undergone complete surgical resection of their stage IIA, IIB, IIIA or IIIB non-squamous or squamous b NSCLC per American Joint Committee on Cancer (AJCC) 8th edition and have had negative margins. N3 disease is not allowed.\n",
-      "\n",
-      "Output:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(prompt.format(criterion=\"\"\"Patient must have undergone complete surgical resection of their stage IIA, IIB, IIIA or IIIB non-squamous or squamous b NSCLC per American Joint Committee on Cancer (AJCC) 8th edition and have had negative margins. N3 disease is not allowed.\"\"\"))"
    ]
@@ -156,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "4c02c6e5-e477-47be-a50c-5509444e292c",
    "metadata": {
     "tags": []
@@ -168,12 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "78706696-5748-4432-a898-82f9140f55d2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    }
+   ],
    "source": [
     "import langchain\n",
     "import time\n",
@@ -188,7 +166,7 @@
     "n = '01'\n",
     "folder = f'test_results_final/trial{n}'\n",
     "folderp = Path(folder)\n",
-    "logfile = folderp / \"outputs.log\"\n",
+    "logfile = folderp / \"outputs_amended.log\"\n",
     "logger.add(logfile, colorize=False, enqueue=True)\n",
     "handler = langchain.callbacks.FileCallbackHandler(logfile)\n",
     "\n",
@@ -199,6 +177,8 @@
     "invoke_times = []\n",
     "for idx, criterion in enumerate(criterions):\n",
     "    idx += 1\n",
+    "    if idx != 38:\n",
+    "        continue\n",
     "    invoke_start = time.time()\n",
     "    results = llm_chain.invoke(input={'criterion': criterion.value})\n",
     "    invoke_times.append(time.time() - invoke_start)\n",
@@ -210,65 +190,106 @@
     "original_text: '{criterion.value}'\n",
     "inclusion: {criterion.inclusion}\n",
     "\"\"\")\n",
+    "    if idx == 38:\n",
+    "        break\n",
+    "end = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de873179-5723-4bd1-8aa3-256f827e90af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(folderp / 'stats.yaml', 'w', encoding='utf-8') as fileout:\n",
-    "    fileout.write(f\"\"\"total_time: {(time.time() - start) // 60}min\n",
+    "    fileout.write(f\"\"\"total_time: {(start - end) // 60}min\n",
     "avg_invoke_time: {sum(invoke_times) // len(invoke_times)}s\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bd962466-70d1-450f-8fee-37191949211d",
+   "execution_count": 25,
+   "id": "b635e145-9067-4828-a286-3c5a93ef8cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Post processing\n",
+    "import glob\n",
+    "import yaml\n",
+    "\n",
+    "output_files = glob.glob(str(folderp / '*_output.txt'))\n",
+    "output_files.sort()\n",
+    "for idx, file in enumerate(output_files):\n",
+    "    idx += 1\n",
+    "    stop_word = 'Criterion:'\n",
+    "    lines = []\n",
+    "    with open(file, encoding='utf-8') as filein:\n",
+    "        original_text = False\n",
+    "        for line in filein:\n",
+    "            if line.startswith(stop_word):\n",
+    "                break\n",
+    "            if line == '\\n':\n",
+    "                continue\n",
+    "            if 'Original Text:' in line:\n",
+    "                original_text = True\n",
+    "                key = 'Original Text'\n",
+    "                _, original_text_l1 = line.split(': ', maxsplit=1)\n",
+    "                lines.append(key + ': |\\n')\n",
+    "                lines.append('    ' + original_text_l1)\n",
+    "            elif 'Disease/Condition:' in line:\n",
+    "                original_text = False\n",
+    "                lines.append(line.removeprefix('\\t').removeprefix('    '))\n",
+    "            elif original_text:\n",
+    "                lines.append('    ' + line)\n",
+    "            else:\n",
+    "                lines.append(line.removeprefix('\\t').removeprefix('    '))\n",
+    "    output_reassembled = ''.join(lines)\n",
+    "    with open(folderp / f'{idx:02}_output_cleaned.yaml', 'w', encoding='utf-8') as fileout:\n",
+    "        fileout.write(output_reassembled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e182cd8-b520-4ca4-8c8a-225efcaf9f66",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dca61b6509c441ab15bb2dba7b49734",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model loaded on cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Copy the prompts that Langchain logs\n",
-    "import json\n",
+    "import pandas as pd\n",
     "\n",
-    "with open(f'{folder}/single_criterion_task_prompts.json') as filein:\n",
-    "    prompts_used = json.load(filein)\n",
-    "\n",
-    "for idx, prompt_used in enumerate(prompts_used):\n",
-    "    prompt_used = prompt_used['prompts'][0]\n",
-    "    prompt_len = get_token_len(prompt_used)\n",
-    "    with open(f'{folder}/single_criterion_task_{idx:02}_prompt.txt', 'w', encoding='utf-8') as fileout:\n",
-    "        fileout.write(\"\"\"[metrics]\n",
-    "length={prompt_len}\n",
-    "\n",
-    "[prompt]\n",
-    "{prompt}\"\"\".format(prompt=prompt_used, prompt_len=prompt_len))"
+    "output_files_clean = glob.glob(str(folderp / '*_output_cleaned.yaml'))\n",
+    "output_files_clean.sort()\n",
+    "df = pd.DataFrame(columns=['Criterion Text In', 'Criterion Text Out', 'Inclusion/Exclusion', 'Disease', 'Biomarker', 'Procedure', 'Drug', 'Criterion Rule'])\n",
+    "for idx, file in enumerate(output_files_clean):\n",
+    "    idx += 1\n",
+    "    with open(folderp / f'{idx:02}_stats.yaml', encoding='utf-8') as filein:\n",
+    "        stats = yaml.safe_load(filein)\n",
+    "    with open(file, encoding='utf-8') as filein:\n",
+    "        print(file)\n",
+    "        output = yaml.safe_load(filein)\n",
+    "    if idx == 38:\n",
+    "        output['Disease/Condition'] = None\n",
+    "        output['Biomarker'] = None\n",
+    "        output['Procedure'] = None\n",
+    "        output['Drug'] = None\n",
+    "        output['Computable Rule'] = None\n",
+    "    row = {\n",
+    "        'Criterion Text In': stats['original_text'],\n",
+    "        'Criterion Text Out': output['Original Text'].strip(),\n",
+    "        'Inclusion/Exclusion': 'Inclusion' if stats['inclusion'] else 'Exclusion',\n",
+    "        'Disease': output['Disease/Condition'],\n",
+    "        'Biomarker': output['Biomarker'],\n",
+    "        'Procedure': output['Procedure'],\n",
+    "        'Drug': output['Drug'],\n",
+    "        'Criterion Rule': output['Computable Rule']\n",
+    "    }\n",
+    "    df = df.append(row, ignore_index=True)\n",
+    "df = df.replace('none', None).replace('None', None)\n",
+    "df.to_csv(folderp / 'results.csv', index=False)"
    ]
   }
  ],
